# django-lasuite

./: .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  package.nix  pyproject.toml  renovate.json  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: Bug_report.md  Support_question.md
.github/workflows/: publish.yml  tests.yml
demo/: .env.example  Dockerfile  README.md  compose.yaml  entrypoint.sh
demo/client/: __init__.py  apps.py  urls.py  views.py
demo/client/templates/client/: base.html  home.html  profile.html  (+1 more)
demo/demo/: __init__.py  settings.py  urls.py  wsgi.py
demo/user/: __init__.py  apps.py  models.py
demo/user/migrations/: 0001_initial.py  __init__.py
documentation/: how-to-use-custom-admin-colors.md  how-to-use-malware-detection-backend.md  how-to-use-marketing-backend.md  how-to-use-oidc-back-channel-logout.md  how-to-use-oidc-backend.md  how-to-use-oidc-call-to-resource-server.md  how-to-use-oidc-resource-server-backend.md  how-to-user-custom-admin-colors.md
gitlint/: gitlint_emoji.py
src/lasuite/: __init__.py
src/lasuite/admin/: apps.py
src/lasuite/configuration/: __init__.py  values.py
src/lasuite/drf/: __init__.py  throttling.py
src/lasuite/malware_detection/: __init__.py  admin.py  enums.py  exceptions.py  handler.py  models.py  utils.py
src/lasuite/marketing/: __init__.py  exceptions.py  handler.py  tasks.py
src/lasuite/oidc_login/: __init__.py  backends.py  decorators.py  enums.py  exceptions.py  middleware.py  urls.py  views.py
src/lasuite/oidc_resource_server/: authentication.py  backend.py  clients.py  mixins.py  urls.py  utils.py  views.py
src/lasuite/tools/: __init__.py  email.py
tests/: conftest.py  factories.py  test_dummy.py
tests/configuration/: __init__.py  test_secret  test_secret_file.py
tests/drf/: __init__.py  test_throttling.py
tests/drf/models/: test_choices.py
tests/malware_detection/: __init__.py  test_check_analysis_pending_command.py  test_handler.py  test_malware_detection_lazy_handler.py  test_malware_detection_reschedule_processing_analysis_command.py
tests/malware_detection/backends/: __init__.py  test_dummy_backend.py  test_jcop_backend.py
tests/malware_detection/tasks/: __init__.py  test_jcop_tasks.py
tests/marketing/: __init__.py  test_handler.py  test_marketing_detection_lazy_handler.py  test_tasks.py
tests/marketing/backends/: __init__.py  test_brevo_backend.py
tests/oidc_login/: test_backends.py  test_decorators.py  test_middleware.py  test_urls.py  test_views.py
tests/oidc_resource_server/: test_authentication.py  test_authentication_get_access_token.py  test_backend.py  test_clients.py  test_utils.py  test_views.py
tests/test_project/: __init__.py  manage.py  settings.py  urls.py  wsgi.py
tests/test_project/oidc_resource_server/: __init__.py  serializers.py  views.py
tests/test_project/user/: __init__.py  apps.py  models.py
tests/tools/: __init__.py  test_email.py
(+23 files in other folders)
